sunfish: Enable burn-in protection
* I am not sure how I forgot this but it's impeccably crucial
  to have this on any device with an OLED screen.

Signed-off-by: Jayant-Deshmukh <jayantdeshmuk008@gmail.com>

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -422,4 +422,7 @@
 
     <bool name="config_fingerprintSupportsGestures">true</bool>
 
+    <!-- Burn in protection -->
+    <bool name="config_statusBarBurnInProtection">true</bool>
+
 </resources>
